<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>qcc-compiler</artifactId>
    <packaging>jar</packaging>

    <parent>
        <groupId>cc.quarkus</groupId>
        <artifactId>qcc-compiler-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <properties>
        <!-- Dependency versions -->
        <version.junit.junit>4.11</version.junit.junit>
        <version.easytesting.fest-assert>2.0M10</version.easytesting.fest-assert>
        <version.org.apache.maven.maven-plugin>2.2.1</version.org.apache.maven.maven-plugin>
        <version.org.apache.maven.maven-settings>3.0.5</version.org.apache.maven.maven-settings>
        <version.org.apache.maven.plugin-api>3.0.5</version.org.apache.maven.plugin-api>
        <version.org.apache.maven.plugin-tools>3.2</version.org.apache.maven.plugin-tools>
        <version.org.apache.maven.plugins.plugin>3.5.1</version.org.apache.maven.plugins.plugin>
        <version.org.apache.maven.plugins.site-plugin>3.2</version.org.apache.maven.plugins.site-plugin>
        <version.org.apache.maven.plugins.maven-dependency-plugin>2.6</version.org.apache.maven.plugins.maven-dependency-plugin>
        <version.org.apache.maven.shared.maven-filtering>1.1</version.org.apache.maven.shared.maven-filtering>
        <version.org.codehaus.plexus.plexus-utils>3.0.10</version.org.codehaus.plexus.plexus-utils>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <build>
        <plugins>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>7.2</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-tree</artifactId>
            <version>7.2</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-analysis</artifactId>
            <version>7.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easytesting</groupId>
            <artifactId>fest-assert-core</artifactId>
            <version>${version.easytesting.fest-assert}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cc.quarkus</groupId>
            <artifactId>qcc-context</artifactId>
        </dependency>
    </dependencies>
</project>
